--- a/app/views/card_templates/edit.html.erb
+++ b/app/views/card_templates/edit.html.erb
@@ -1,5 +1,7 @@
 <h1 class="text-xl font-semibold mb-4">Edit <%= @card.kind %></h1>
 <%= render "form" %>
 <p class="mt-3">
-  <%= link_to "Back", entries_path(subject_id: @card.subject_id), class: "underline" %>
+  <%= link_to "Back",
+      entries_path(subject_id: params[:subject_id].presence || @card.subject_id),
+      class: "underline" %>
 </p>
